[package]
name = "totp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "env"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4.0"
env_logger = "0.10.0"
diesel = { version = "2.0.3", features = ["sqlite"] }
dotenvy = "0.15"
totp-rs = "4.2.0"
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
